--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Matthew Raburn - IT Professional, Enterprise Reliability, Tech Leadership" />
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <!-- (Temporary) Tailwind CDN config. Remove both scripts once you switch to the build step -->
-    <script>
-    </script>
-
+    <link rel="icon" href="/favicon.ico" /> 
+    <link rel="apple-touch-icon" href="/logo192.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -22,5 +17,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
